--- a/client.html
+++ b/client.html
@@ -18,7 +18,7 @@
   <div id="board"></div>
 
   <script>
-    const socket = io("http://localhost:3000");
+    const socket = io("https://fraction-4mok.onrender.com");
     const boardEl = document.getElementById("board");
     const status = document.getElementById("status");
     const SIZE = 7;
