--- a/client/index.html
+++ b/client/index.html
@@ -6,56 +6,111 @@
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
   <style>
     body { font-family: sans-serif; text-align: center; background: #f0f0f0; padding: 10px; }
-    #board { display: grid; grid-template-columns: repeat(7, 1fr); max-width: 600px; margin: auto; gap: 5px; }
-    .cell { background: #fff; border: 1px solid #ccc; height: 60px; line-height: 60px; font-size: 24px; cursor: pointer; }
+    #board { display: grid; grid-template-columns: repeat(7, 1fr); max-width: 700px; margin: auto; gap: 5px; }
+    .cell { background: #fff; border: 1px solid #ccc; height: 180px; font-size: 14px; padding: 4px; position: relative; }
     .cell.player1 { background: #aee1f9; }
     .cell.player2 { background: #f9b2b2; }
+    .fraction { margin: 2px 0; }
+    .fraction input { width: 30px; text-align: center; }
+    .fraction-line { width: 30px; height: 1px; background: black; margin: 2px auto; }
+    .fraction-block { display: inline-block; margin: 0 4px; text-align: center; }
+    .fraction-text { display: flex; justify-content: center; margin-bottom: 4px; }
   </style>
 </head>
 <body>
   <h1>실시간 분수 통분 오목</h1>
-  <p id="status">연결 중...</p>
+  <div>
+    <input id="roomCode" placeholder="방 코드 입력" />
+    <button onclick="joinRoom()">입장</button>
+  </div>
+  <p id="status">방 코드로 입장해 주세요.</p>
   <div id="board"></div>
 
   <script>
     const socket = io("https://fraction-4mok.onrender.com");
     const boardEl = document.getElementById("board");
     const status = document.getElementById("status");
+    const roomInput = document.getElementById("roomCode");
     const SIZE = 7;
     let player = 0;
     let myTurn = false;
+    let currentBoard = [];
+    let fractionData = [];
 
-    function drawBoard(board) {
+    function joinRoom() {
+      const code = roomInput.value.trim();
+      if (!code) return alert("방 코드를 입력하세요.");
+      socket.emit("joinRoom", code);
+    }
+
+    function createFractionElement(f) {
+      const wrap = document.createElement("div");
+      wrap.className = "fraction-block";
+      wrap.innerHTML = `<div>${f.n}</div><div class='fraction-line'></div><div>${f.d}</div>`;
+      return wrap;
+    }
+
+    function createFractionInput() {
+      const wrap = document.createElement("div");
+      wrap.className = "fraction-block fraction";
+      const top = document.createElement("input");
+      const line = document.createElement("div");
+      line.className = "fraction-line";
+      const bot = document.createElement("input");
+      wrap.appendChild(top);
+      wrap.appendChild(line);
+      wrap.appendChild(bot);
+      return { wrap, top, bot };
+    }
+
+    function drawBoard(board, data) {
       boardEl.innerHTML = "";
+      currentBoard = board;
+      fractionData = data;
+
       board.forEach((row, r) => {
         row.forEach((cell, c) => {
-          const div = document.createElement("div");
-          div.className = "cell" + (cell ? ` player${cell}` : "");
-          div.onclick = () => {
-            if (myTurn && !cell) socket.emit("submit", { row: r, col: c });
+          const cellDiv = document.createElement("div");
+          cellDiv.className = "cell" + (cell ? ` player${cell}` : "");
+          const [f1, f2] = data[r][c];
+
+          const fWrap = document.createElement("div");
+          fWrap.className = "fraction-text";
+          fWrap.appendChild(createFractionElement(f1));
+          fWrap.appendChild(createFractionElement(f2));
+
+          const a1 = createFractionInput();
+          const a2 = createFractionInput();
+
+          const btn = document.createElement("button");
+          btn.textContent = "제출";
+          btn.onclick = () => {
+            if (myTurn && !cell) {
+              const answers = [
+                { n: Number(a1.top.value), d: Number(a1.bot.value) },
+                { n: Number(a2.top.value), d: Number(a2.bot.value) }
+              ];
+              socket.emit("submit", { row: r, col: c, answers });
+            }
           };
-          boardEl.appendChild(div);
+
+          cellDiv.appendChild(fWrap);
+          cellDiv.appendChild(a1.wrap);
+          cellDiv.appendChild(a2.wrap);
+          cellDiv.appendChild(btn);
+          boardEl.appendChild(cellDiv);
         });
       });
     }
 
-    socket.on("connect", () => {
-      status.textContent = "게임에 연결되었습니다. 대기 중...";
-    });
-
-    socket.on("full", () => {
-      status.textContent = "방이 가득 찼습니다.";
-    });
-
     socket.on("playerNumber", (num) => {
       player = num;
-      status.textContent = `당신은 플레이어 ${num}입니다.`;
     });
 
-    socket.on("boardUpdate", ({ board, currentPlayer }) => {
-      drawBoard(board);
+    socket.on("boardInit", ({ board, data, currentPlayer, count }) => {
+      drawBoard(board, data);
       myTurn = currentPlayer === player;
-      status.textContent = myTurn ? "당신의 차례입니다." : "상대 차례입니다.";
+      status.textContent = `접속자 수: ${count}명 / ${myTurn ? '내 차례' : '상대 차례'}`;
     });
 
     socket.on("moveMade", ({ row, col, player }) => {
@@ -72,6 +127,10 @@
     socket.on("gameOver", ({ winner }) => {
       status.textContent = `🎉 플레이어 ${winner} 승리!`;
       myTurn = false;
+    });
+
+    socket.on("wrong", () => {
+      alert("틀렸습니다. 통분을 다시 확인하세요.");
     });
 
     socket.on("reset", () => {
